--- a/src/app/components/user/create/user-create.component.html
+++ b/src/app/components/user/create/user-create.component.html
@@ -23,7 +23,7 @@
 
     <div class="form-buttons">
       <button mat-raised-button color="primary" type="submit">Ok</button>
-      <button mat-raised-button color="primary" type="button">Cancel</button>
+      <button mat-raised-button color="primary" (click)="cancel()" type="button">Cancel</button>
     </div>
   </form>
 </div>
