--- a/src/app/components/menu/menu.component.html
+++ b/src/app/components/menu/menu.component.html
@@ -2,7 +2,7 @@
     <mat-sidenav #sidenav mode="side" opened>
       <mat-nav-list>
         <a class="menu-boton" routerLink="/usuarios" routerLinkActive="active">Listar Usuarios</a>
-        <a style="color: aliceblue;" mat-list-item routerLink="/crear-usuario" routerLinkActive="active">Crear Usuario</a>
+        <a style="color: rgb(255, 255, 255);" mat-list-item routerLink="/crear-usuario" routerLinkActive="active">Crear Usuario</a>
       </mat-nav-list>
     </mat-sidenav>
   
