--- a/src/app/user-modal/user-modal.component.html
+++ b/src/app/user-modal/user-modal.component.html
@@ -13,7 +13,7 @@
         <mat-label>Seleccionar Fondo</mat-label>
         <mat-select [(ngModel)]="selectedFund" name="fund" required>
           <mat-option *ngFor="let fund of funds" [value]="fund.id">
-            {{ fund.nombre | uppercase }}
+            {{ fund.nombre }}
           </mat-option>
         </mat-select>
       </mat-form-field>
